--- a/assets/css/style-liberty.css
+++ b/assets/css/style-liberty.css
@@ -18809,7 +18809,7 @@ a.dropdown-item.active {
 }
 
 .w3l-main-slider .banner-view {
-    background: url(../images/banner1.jpg) no-repeat center;
+    background: url(https://static01.nyt.com/images/2020/08/06/business/06taiwan-bikes-2/merlin_174895581_ae9ec662-dc68-402a-b02c-b5df8ff01588-superJumbo.jpg?quality=75&auto=webp) no-repeat center;
     -ms-background-size: cover;
     background-size: cover;
     z-index: 0;
@@ -18821,17 +18821,17 @@ a.dropdown-item.active {
 }
 
 .w3l-main-slider .banner-top2 {
-    background: url(../images/banner2.jpg) no-repeat center;
+    background: url(https://img.zoyosports.com/parts%E7%B4%A0%E6%9D%90%2FFender_banner_.webp) no-repeat center;
     background-size: cover;
 }
 
 .w3l-main-slider .banner-top3 {
-    background: url(../images/banner3.jpg) no-repeat center;
+    background: url(https://img.zoyosports.com/parts%E7%B4%A0%E6%9D%90%2FBike%20rearview%20mirror.webp) no-repeat center;
     background-size: cover;
 }
 
 .w3l-main-slider .banner-top4 {
-    background: url(../images/banner4.jpg) no-repeat center;
+    background: url(https://img.zoyosports.com/parts%E7%B4%A0%E6%9D%90%2Fbike-compute.webp) no-repeat center;
     background-size: cover;
 }
 
@@ -19746,7 +19746,7 @@ ul.gallery_agile li {
 /*--//gallery--*/
 /*--/video--*/
 .w3l-index5 {
-    background: url(../images/banner4.jpg) no-repeat center;
+    background: url(https://img.zoyosports.com/b2b%2F2024%2F05%2F865b258cf6cb930084b2704119c04cd7.webp) no-repeat center;
     -ms-background-size: cover;
     background-size: cover;
     z-index: 0;
@@ -20752,7 +20752,7 @@ h4.head {
 
 /*--//progress-info--*/
 .w3l-join-main {
-    background: url(../images/banner2.jpg) no-repeat center;
+    background: url(https://img.zoyosports.com/b2b/2024/05/a4387871a6934e10e9f3e3450a5a3bdb.webp) no-repeat center;
     -ms-background-size: cover;
     background-size: cover;
     z-index: 0;
