--- a/assets/css/style-liberty.css
+++ b/assets/css/style-liberty.css
@@ -18809,7 +18809,7 @@ a.dropdown-item.active {
 }
 
 .w3l-main-slider .banner-view {
-    background: url(https://static01.nyt.com/images/2020/08/06/business/06taiwan-bikes-2/merlin_174895581_ae9ec662-dc68-402a-b02c-b5df8ff01588-superJumbo.jpg?quality=75&auto=webp) no-repeat center;
+    background: url(https://img.zoyosports.com/b2b/2024/05/a498a5cc366607513d89ffe286d826af.webp) no-repeat center;
     -ms-background-size: cover;
     background-size: cover;
     z-index: 0;
